# CMakePythonExtensionsWith2And3

./: .gitignore  CMakeLists.txt  README.md  greet.c
cmake/: FindPython.cmake
py2/: greet2.py
py3/: greet3.py
