cmake_minimum_required(VERSION 3.5)
 
project(PythonExtensionsWith2And3)

include(cmake/FindPython.cmake)
 
find_python(2.7 PYTHON2_FOUND PYTHON2_EXECUTABLE
            PYTHON2_VERSION PYTHON2_VERSION_MAJOR PYTHON2_VERSION_MINOR
            PYTHON2_LIBRARIES PYTHON2_INCLUDE_DIRS PYTHON2_PACKAGES_DIR)
message("PYTHON2_FOUND ${PYTHON2_FOUND} PYTHON2_EXECUTABLE ${PYTHON2_EXECUTABLE}
         PYTHON2_VERSION ${PYTHON2_VERSION} PYTHON2_VERSION_MAJOR ${PYTHON2_VERSION_MAJOR} PYTHON2_VERSION_MINOR ${PYTHON2_VERSION_MINOR}
         PYTHON2_LIBRARIES ${PYTHON2_LIBRARIES} PYTHON2_INCLUDE_DIRS ${PYTHON2_INCLUDE_DIRS} PYTHON2_PACKAGES_DIR ${PYTHON2_PACKAGES_DIR}")

add_library(greet2 SHARED greet.c)
target_include_directories(greet2 PUBLIC ${PYTHON2_INCLUDE_DIRS})
target_link_libraries(greet2 ${Boost_LIBRARIES})
install(FILES "${PROJECT_BINARY_DIR}/libgreet2.so"
        DESTINATION "${PROJECT_SOURCE_DIR}/py2"
        PERMISSIONS
          OWNER_EXECUTE OWNER_WRITE OWNER_READ
          GROUP_EXECUTE GROUP_WRITE GROUP_READ
          WORLD_EXECUTE WORLD_READ
        RENAME libgreet.so)

# if not built as "libgreet2", use following command
# set_target_properties(greet2 PROPERTIES PREFIX "")

find_python(3.2 PYTHON3_FOUND PYTHON3_EXECUTABLE
            PYTHON3_VERSION PYTHON3_VERSION_MAJOR PYTHON3_VERSION_MINOR
            PYTHON3_LIBRARIES PYTHON3_INCLUDE_DIRS PYTHON3_PACKAGES_DIR)
message("PYTHON3_FOUND ${PYTHON3_FOUND} PYTHON3_EXECUTABLE ${PYTHON3_EXECUTABLE}
         PYTHON3_VERSION ${PYTHON3_VERSION} PYTHON3_VERSION_MAJOR ${PYTHON3_VERSION_MAJOR} PYTHON3_VERSION_MINOR ${PYTHON3_VERSION_MINOR}
         PYTHON3_LIBRARIES ${PYTHON3_LIBRARIES} PYTHON3_INCLUDE_DIRS ${PYTHON3_INCLUDE_DIRS} PYTHON3_PACKAGES_DIR ${PYTHON3_PACKAGES_DIR}")

add_library(greet3 SHARED greet.c)
target_include_directories(greet3 PUBLIC ${PYTHON3_INCLUDE_DIRS})
target_link_libraries(greet3 ${PYTHON3_LIBRARIES})
install(FILES "${PROJECT_BINARY_DIR}/libgreet3.so"
        DESTINATION "${PROJECT_SOURCE_DIR}/py3"
        PERMISSIONS
          OWNER_EXECUTE OWNER_WRITE OWNER_READ
          GROUP_EXECUTE GROUP_WRITE GROUP_READ
          WORLD_EXECUTE WORLD_READ
        RENAME libgreet.so)

